# Assignment

./: 3 sd num to str  bin_to_int.py  canFinish.py  climbStairs.py  climber.py  cons_n_vows.py  daily_logs.py  ddLog.py  firstLetterToAppear.py  linked_list_cycle.py  lucky_num.py  stack.py  stack_02.py  treeContainsAValue.py  two_sum.py  uniques.py  valid_firstLetterToAppear.py  valid_parentheses.py  valid_parentheses_02.py
flashcard_fr/: .gitignore  LICENSE  README.md  app.py  config.py  models.py  mypy.ini  package-lock.json  package.json  pyproject.toml
flashcard_fr/clients/: prompt_error.pt  prompt_error.py  translate.py
flashcard_fr/contents/: language_by_region.py
flashcard_fr/migrations/versions/: 05d3534fd38a_back_to_string_uuid_conflict.py  fdf8ea1b3f2a_cahnge_string_to_uuid.py
flashcard_fr/repositories/card/: card_repository.py
flashcard_fr/repositories/dashboard/: dashboard_repository.py
flashcard_fr/repositories/quiz/: quiz_repository.py
flashcard_fr/repositories/user/: user_repository.py
flashcard_fr/routes/: auth_routes.py  card_routes.py  dashboard_routes.py  expressions_routes.py  quiz_routes.py
flashcard_fr/services/: __init__.py  auth_service.py  card_service.py  dashboard_service.py  quiz_service.py
flashcard_fr/static/js/quiz/: meaning_play.js
flashcard_fr/templates/: dashboard.html  error_alert.html  expressions.html  flashcard.html  home.html  layout.html  login.html  navbar.html  quiz.html  quiz_score.html  register.html  search.html
flashcard_fr/templates/components/: card.html  score.html
flashcard_fr/utils/: helper.py
(+23 files in other folders)
